# KanaStation

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/common/: types.hpp
include/core/: config.hpp  kanacore.hpp  scheduler.hpp
include/core/hw/: audio.hpp  boot_rom.hpp  bus.hpp  clockdiv.hpp  ddr_ram.hpp  dmac.hpp  dmacplus.hpp  edram.hpp  gpio.hpp  i2c.hpp  intc.hpp  kirk.hpp  ms.hpp  nand.hpp  shared_ram.hpp  spi.hpp  spock.hpp  syscon.hpp  sysctrl.hpp  systime.hpp
include/core/hw/allegrex/: allegrex.hpp  interpreter.hpp  scratchpad.hpp
include/core/hw/ge/: edram.hpp  ge.hpp  rasterizer.hpp
include/core/hw/me/: scratchpad.hpp  vme_dmac.hpp
include/core/hw/uart/: uart.hpp
src/core/: config.cpp  kanacore.cpp  scheduler.cpp
src/core/hw/: audio.cpp  boot_rom.cpp  bus.cpp  clockdiv.cpp  ddr_ram.cpp  dmac.cpp  dmacplus.cpp  edram.cpp  gpio.cpp  i2c.cpp  intc.cpp  kirk.cpp  ms.cpp  nand.cpp  shared_ram.cpp  spi.cpp  spock.cpp  syscon.cpp  sysctrl.cpp  systime.cpp
src/core/hw/allegrex/: allegrex.cpp  interpreter.cpp  scratchpad.cpp
src/core/hw/ge/: edram.cpp  ge.cpp  rasterizer.cpp
src/core/hw/me/: scratchpad.cpp  vme_dmac.cpp
src/core/hw/uart/: uart.cpp
src/frontends/sdl/: main.cpp
